updated code with script.js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="newTasks-cntnr">
             <!-- <div class="task">
                 <input type="checkbox" class="checkbox"><label class="textField">Test</label>
-                <a href="#" class="delete">✕</a>
+                <button class="delete">✕</button>
             </div> -->
 
         </div>
@@ -35,7 +35,7 @@
     </div>
 
 
-    <script src="js.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
